--- a/models/sources.yml
+++ b/models/sources.yml
@@ -1,13 +1,30 @@
-version : 2
+version: 2
 
-sources : 
-    - name : jaffle_shop
-      description: This a replica of another db
-      database: raw
-      schema: jaffle_shop
-      tables:
-        - name: customers
-          description: One record per customer
-        - name: orders
-          description: One record per order. Includes cancelled and deleted orders.  
-          
+sources:
+  - name: jaffle_shop
+    description: a clone of a Postgres application database
+    database: raw
+    schema: jaffle_shop
+    tables:
+      - name: customers
+        description: the raw customers data
+        columns:
+          - name: id
+            description: primary key
+            tests:
+              - unique
+              - not_null
+            
+      - name: orders
+        description: the raw orders data
+        columns:
+          - name: id
+            description: primary key
+            tests:
+              - unique              
+              - not_null
+          - name: status
+        loaded_at_field: _etl_loaded_at
+        freshness:
+          warn_after: {count: 12, period: hour}
+          error_after: {count: 24, period: hour}
